@@ -30,6 +30,7 @@ Jump Start Changelog
 * Improvement: When inputting a specific list of pages for post element query, you can now use slugs for pages, posts, and portfolio items.
 * Improvement: When selecting for a post grid element to "popout" in builder, there is now padding to separate from the browser edge.
 * Improvement: More default spacing between elements in custom layouts.
+* Improvement: Function `themeblvd_related_posts()` will now allow you to pass any post type and associated taxonomy.
 * Updated: FontAwesome to 4.5.
 * Updated: FlexSlider to 2.6.
 * Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
